<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.poweron_studio.eathealthy.AnabolicBowl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/anabTitle"
        android:id="@+id/anabTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="32sp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/anabPic"
        android:src="@drawable/break8"
        android:cropToPadding="true"
        android:contentDescription="@string/anabPic"
        android:layout_below="@+id/anabTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/anab_recipe"
        android:id="@+id/anabText"
        android:textSize="10sp"
        android:layout_below="@+id/ingAnab"
        android:layout_alignLeft="@+id/anabPic"
        android:layout_alignStart="@+id/anabPic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingText"
        android:id="@+id/ingAnab"
        android:textSize="35sp"
        android:layout_below="@+id/anabPic"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anab_directions"
        android:id="@+id/anab_directions"
        android:textSize="12sp"
        android:singleLine="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
