<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.poweron_studio.eathealthy.ProteinScramble">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/proteinTitle"
        android:id="@+id/proteinTitle"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/proteinPic"
        android:src="@drawable/break7"
        android:cropToPadding="true"
        android:contentDescription="@string/proteinPic"
        android:layout_below="@+id/proteinTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/protein_recipe"
        android:id="@+id/proteinText"
        android:textSize="10sp"
        android:layout_below="@+id/ingProtein"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingText"
        android:id="@+id/ingProtein"
        android:textSize="35sp"
        android:layout_below="@+id/proteinPic"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein_directions"
        android:id="@+id/protein_directions"
        android:textSize="12sp"
        android:singleLine="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/proteinPic"
        android:layout_alignStart="@+id/proteinPic" />

</RelativeLayout>
