<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.poweron_studio.eathealthy.SouthwestScramble">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/southTitle"
        android:id="@+id/pepperTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="32sp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/pepperPic"
        android:src="@drawable/break4"
        android:cropToPadding="true"
        android:layout_below="@+id/pepperTitle"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/southPic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/south_recipe"
        android:id="@+id/burrText"
        android:textSize="10sp"
        android:layout_below="@+id/ingSouth"
        android:layout_alignLeft="@+id/pepperPic"
        android:layout_alignStart="@+id/pepperPic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingText"
        android:id="@+id/ingSouth"
        android:textSize="35sp"
        android:layout_below="@+id/pepperPic"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/south_directions"
        android:id="@+id/south_directions"
        android:textSize="12sp"
        android:singleLine="false"
        android:layout_below="@+id/burrText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
