<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.poweron_studio.eathealthy.BananaSplit">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Banana Split"
        android:id="@+id/bananaTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="32sp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/bananaPic"
        android:src="@drawable/break6"
        android:cropToPadding="true"
        android:contentDescription="@string/burrPic"
        android:layout_below="@+id/bananaTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/banana_recipe"
        android:id="@+id/burrText"
        android:textSize="10sp"
        android:layout_below="@+id/ingBanana"
        android:layout_alignLeft="@+id/bananaPic"
        android:layout_alignStart="@+id/bananaPic"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingText"
        android:id="@+id/ingBanana"
        android:textSize="35sp"
        android:layout_below="@+id/bananaPic"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banana_directions"
        android:id="@+id/banana_directions"
        android:textSize="12sp"
        android:singleLine="false"
        android:layout_below="@+id/burrText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"/>

</RelativeLayout>
